# theme-manager

./: Cargo.toml  README.md
src/: error.rs  hooks.rs  install.rs  main.rs  manager.rs  templates.rs  themes.rs
src/utils/: mod.rs  read_dir.rs  tree_reader.rs
