[package]
name = "theme-manager"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
mustache = "0.9.0"
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "1.0.24"
toml = "0.5.8"
